test/errors/resolution/valueAsTypeExpr.chpl
var someInt = 1+1;
var x: someInt = 1;
