test/errors/resolution/valueAsTypeExpr.1.good
valueAsTypeExpr.chpl:2: error: type specifier is a value of type 'int(64)', but it was expected to be a type
